# Trayser

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  pbr.frag.slang
assets/TestModels/: VeachRemake.blend  VeachRemake.blend1  VeachRemakeNoWalls.blend
assets/TestModels/Sphere/: Sphere.glb
assets/TestModels/VeachRemake/: veach_remake.glb  veach_remake_no_walls.glb
shaders/: brdf.h  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  common.hlsl  equi2cubemap.slang  gpu_io.h  mis.h  path_traced.slang  pbr.frag.slang  pbr.slang  pbr.vert.slang  rasterized.slang  ray_traced.slang  ray_tracing.slang  test.slang  test.vert.hlsl  test.vert.slang  tex_image.frag  tex_image.frag.spv  tonemap.slang  triangle.frag.slang  triangle.frag.spv  triangle.vert.slang  triangle.vert.spv
source/: camera.cpp  camera.h  descriptors.cpp  descriptors.h  device.h  editor.h  engine.cpp  engine.h  images.cpp  input.cpp  loader.cpp  main.cpp  model_loader.h  rasterized_pipeline.cpp  renderer.cpp  renderer.h  scene.cpp  slang_compiler.cpp  slang_compiler.h  texture.h  tonemap_pipeline.h  types.h  util.h  vkfuncs.h
src/: CMakeLists.txt  background_pipeline.cpp  background_pipeline.h  camera.cpp  camera.h  compiler.cpp  compiler.h  components.h  descriptors.cpp  descriptors.h  device.cpp  device.h  device.inl  editor.cpp  editor.h  engine.cpp  engine.h  equi2cubemap_pipeline.cpp  equi2cubemap_pipeline.h  gbuffer.cpp  gbuffer.h  gpu_io.h  images.cpp  images.h  initializers.cpp  initializers.h  input.cpp  input.h  loader.cpp  loader.h  main.cpp  model_loader.cpp  pch.h  pipelines.cpp  pipelines.h  rasterized_pipeline.cpp  rasterized_pipeline.h  ray_traced_pipeline.cpp  ray_traced_pipeline.h  ray_tracing.cpp  (+28 more)
